# music-video-editing

./: CLAUDE.md  interesting_moments.txt  main.py  main_debug.py  main_fixed.py  main_loop_detection.py  main_optimized.py  main_sensitive.py  main_sensitive_fixed.py  pyproject.toml  segment_boundaries_fixed.txt  segment_boundaries_optimized.txt  test_components.py  test_moviepy_api.py  test_print.py
