[project]
name = "music-video-editing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instaloader>=4.14.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "numpy>=2.2.6",
    "soundfile>=0.13.1",
]
